2010-10-31  Robert Hogan  <robert@webkit.org>

Reviewed by Antonio Gomes.

        [Qt] [Gtk] Plug-ins having upper case in mime type are failing to load

        Qt and Gtk are case-sensitive when storing the declared mime-type
        of plugins. Since plugin mime-types are lowercased prior to searching
        for them in the plugin database, ensure they are loaded with the
        mime-type in lower case too.

        https://bugs.webkit.org/show_bug.cgi?id=36815

        * plugins/gtk/PluginPackageGtk.cpp:
        (WebCore::PluginPackage::fetchInfo):
        * plugins/qt/PluginPackageQt.cpp:
        (WebCore::PluginPackage::setMIMEDescription):
2010-10-31  Robert Hogan  <robert@webkit.org>

        Reviewed by Antonio Gomes.

        [Qt] [Gtk] Plug-ins having upper case in mime type are failing to load

        Qt and Gtk are case-sensitive when storing the declared mime-type
        of plugins. Since plugin mime-types are lowercased prior to searching
        for them in the plugin database, ensure they are loaded with the
        mime-type in lower case too.

        Change the test netscape plugin to declare its mimetype in sentence
        case so that the correct behaviour is enforced.

        https://bugs.webkit.org/show_bug.cgi?id=36815

        * DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (NP_GetMIMEDescription):

Canonical link: https://commits.webkit.org/61504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71006 268f45cc-cd09-0410-ab3c-d52691b4dbfc