WebCore/plugins/gtk/PluginPackageGtk.cpp
@@ -74,7 +74,7 @@ bool PluginPackage::fetchInfo()
 
     gchar** mimeDescs = g_strsplit(types, ";", -1);
     for (int i = 0; mimeDescs[i] && mimeDescs[i][0]; i++) {
-        gchar** mimeData = g_strsplit(mimeDescs[i], ":", 3);
+        gchar** mimeData = g_strsplit(g_strdown(mimeDescs[i]), ":", 3);
         if (g_strv_length(mimeData) < 3) {
             g_strfreev(mimeData);
             continue;
