WebCore/plugins/qt/PluginPackageQt.cpp
@@ -69,10 +69,10 @@ bool PluginPackage::fetchInfo()
 
 void PluginPackage::setMIMEDescription(const String& mimeDescription)
 {
-    m_fullMIMEDescription = mimeDescription;
+    m_fullMIMEDescription = mimeDescription.lower();
 
     Vector<String> types;
-    mimeDescription.split(UChar(';'), false, types);
+    mimeDescription.lower().split(UChar(';'), false, types);
     for (unsigned i = 0; i < types.size(); ++i) {
         Vector<String> mime;
         types[i].split(UChar(':'), true, mime);
